# colorized

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  download_coco_data.py  filter_coco_annotations.py  pyproject.toml
tests/: test_colorized.py
