[tool.poetry]
name = "colorized"
version = "0.1.0"
description = "Api dependencies"
authors = ["Yaswanth Bangaru yaswanthbangaru13@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
pycocotools = "^2.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.7.4"
mypy = "^0.942"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
